# dev

./: .gitignore
bjarne_scripts/: CMakeLists.txt  chrono.cpp  chrono.hpp  ctok.cpp  notes.txt  utils.hpp
bjarne_scripts/src/: Chrono.cpp  Chrono.hpp  baseVec.hpp  construct_destruct.cpp  ctok.cpp  generalVec.cpp  genericVec.cpp  genericVec.hpp  genericVector.cpp  genericVector.hpp  jackNjill.cpp  leaksGeneralVec.cpp  myVecTemplate.cpp  myVecTemplate.hpp  myVector.cpp  myVector.hpp  myVectorBase.hpp  naiveLList.cpp  naiveLList.hpp  pll_examples.cpp  pll_hello.cpp  pointerFun.cpp  pointerSin.cpp  probs.cpp  test_myVector.cpp  utils.hpp  vecBase.hpp
bjarne_scripts/tests/: LEAK_test_genVec.cpp  test_chrono.cpp  test_generalVec.cpp  test_genericVector.cpp  test_myVector.cpp  test_naiveLList.cpp
pystuff/dive_into_dl/: 0_ingesting.ipynb  0_intro.ipynb  0_lin_alg.ipynb  autodiff.ipynb
